# FOSCAR_kookmin_xycar_2026

./: .gitignore  LICENSE  README.md  readme.md  실행순서.txt
misc_files/: frames_2026-05-29_00.24.20.gv  mapping_setup.rviz
src/ad_tf_maker/: package.xml  setup.cfg  setup.py
src/ad_tf_maker/ad_tf_maker/: dead_reckoning.py
src/ad_tf_maker/test/: test_pep257.py
src/ad_translator/: package.xml  setup.cfg  setup.py
src/ad_translator/ad_translator/: goal_sender.py  lidar_translator.py  motor_translator.py
src/foscar_perception/: package.xml  setup.cfg  setup.py
src/foscar_perception/foscar_perception/: lane_detector.py
src/rubbercone/: package.xml  setup.cfg  setup.py
src/rubbercone/launch/: rubbercone.launch.py
src/rubbercone/rubbercone/: drive_pivot.py  orange_detection.py  planner.py
src/tf_maker/: package.xml  setup.cfg  setup.py
src/tf_maker/tf_maker/: tf_tester.py
src/tf_static_translator/: package.xml  setup.cfg  setup.py
src/tf_static_translator/tf_static_translator/: translator.py
src/track_drive/: TRACK_DRIVE_NOTES.md  package.xml  setup.py
src/track_drive/config/: map2.pgm  map2.yaml  my_map.pgm  my_map.yaml  my_map_edited.pgm  my_map_edited.yaml  nav2_params.yaml  slam_toolbox_params.yaml
src/track_drive/launch/: bringup.launch.py  track_drive.launch.py  track_with_traffic_light.launch.py
src/track_drive/track_drive/: lane_detector.py  overtake_drive.py  pedestrian_detection.py  pedestrian_detector.py  track_drive.py  track_drive3.py  track_drive_2.py  traffic_Light.py
