<package format="3">
<name>rubbercone</name>
<version>0.0.1</version>
<description>Rubbercone driving package</description>
<maintainer email="user@example.com">user</maintainer>
<license>MIT</license>
<exec_depend>rclpy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>xycar_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>opencv-python</exec_depend>
<buildtool_depend>ament_cmake</buildtool_depend>
<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>
<export>
<build_type>ament_python</build_type>
</export>
</package>